# api-funkhaus-micro-fastapi

./: .endpoints.json  .gitignore  README.md  config.json  main.py  pyproject.toml
API/: __init__.py  adapter_functions.py  endpoints.py  engine.py  enums.py  inner_models.py  outer_models.py  requests.py
actions/: __init__.py  scenarios.py
logsetup/: __init__.py
microfunkhaus/: __init__.py  app.py  main.py
microfunkhaus/API/: __init__.py  adapter_functions.py  endpoints.py  engine.py  enums.py  inner_models.py  outer_models.py  requests.py
microfunkhaus/actions/: __init__.py  scenarios.py
microfunkhaus/app/: __init__.py  app.py
microfunkhaus/logsetup/: __init__.py
tests/: __init__.py  mocking.py  raw.py  test_constructors.py  test_routes.py
