[tool.poetry]
name = "microfunkhaus"
version = "0.1.1"
description = "A facade/gateway microservice to rule them all."
authors = ["Arthur Ryzhak <ryzhakar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79"
aiohttp = "^3.8.1"
uvicorn = "^0.18.2"
email-validator = "^1.2.1"
chrdiotypes = {path = "../chrdiotypes/dist/chrdiotypes-0.1.3-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
requests = "^2.28.1"
hypothesis = "^6.54.4"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
