[tool.poetry]
name = "microfunkhaus"
version = "1.0.0"
description = "A facade/gateway microservice to rule them all."
authors = ["Arthur Ryzhak <ryzhakar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.81"
aiohttp = "^3.8.1"
uvicorn = "^0.18.2"
email-validator = "^1.2.1"
chrdiotypes = {git = "git@github.com:chrdio/chrdiotypes.git", rev = "main"}


[tool.poetry.dev-dependencies]
black = "^22.6.0"
requests = "^2.28.1"
hypothesis = "^6.54.4"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
devtools = "^0.9.0"

[tool.pytest.ini_options]
addopts = "-ra -q --cov=microfunkhaus --cov-branch --no-cov-on-fail --cov-report=term-missing:skip-covered --hypothesis-explain --color=yes tests/test_constructors.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
